Resolved dependencies, added models, first step at working database
