# src/generated/java/com/beevy/api/EventApi.java
@@ -28,7 +28,7 @@ import javax.validation.constraints.*;
 import java.io.IOException;
 import java.util.List;
 import java.util.Optional;
-@javax.annotation.Generated(value = "io.swagger.codegen.languages.SpringCodegen", date = "2018-04-05T17:22:39.402+02:00")
+@javax.annotation.Generated(value = "io.swagger.codegen.languages.SpringCodegen", date = "2018-04-07T16:19:30.660+02:00")
 
 @Api(value = "event", description = "the event API")
 public interface EventApi {
@@ -75,7 +75,7 @@ public interface EventApi {
         if(getObjectMapper().isPresent() && getAcceptHeader().isPresent()) {
             if (getAcceptHeader().get().contains("application/json")) {
                 try {
-                    return new ResponseEntity<>(getObjectMapper().get().readValue("[ {  \"userSecret\" : \"userSecret\",  \"memberCount\" : 0,  \"description\" : \"description\",  \"location\" : {    \"zip\" : 6,    \"city\" : \"city\",    \"street\" : \"street\"  },  \"time\" : \"time\",  \"title\" : \"title\",  \"category\" : \"category1\",  \"userID\" : \"userID\"}, {  \"userSecret\" : \"userSecret\",  \"memberCount\" : 0,  \"description\" : \"description\",  \"location\" : {    \"zip\" : 6,    \"city\" : \"city\",    \"street\" : \"street\"  },  \"time\" : \"time\",  \"title\" : \"title\",  \"category\" : \"category1\",  \"userID\" : \"userID\"} ]", List.class), HttpStatus.NOT_IMPLEMENTED);
+                    return new ResponseEntity<>(getObjectMapper().get().readValue("[ {  \"summary\" : \"summary\",  \"date\" : \"date\",  \"registeredMembers\" : [ {    \"mail\" : \"mail\",    \"name\" : \"name\",    \"userID\" : \"userID\"  }, {    \"mail\" : \"mail\",    \"name\" : \"name\",    \"userID\" : \"userID\"  } ],  \"address\" : {    \"zip\" : 0,    \"city\" : \"city\",    \"street\" : \"street\"  },  \"currentMemberCount\" : 1,  \"possibleMemberCount\" : 6,  \"endDate\" : \"endDate\",  \"admin\" : {    \"mail\" : \"mail\",    \"name\" : \"name\",    \"userID\" : \"userID\"  },  \"description\" : \"description\",  \"title\" : \"title\",  \"type\" : \"category1\",  \"userID\" : \"userID\",  \"userSecret\" : \"userSecret\"}, {  \"summary\" : \"summary\",  \"date\" : \"date\",  \"registeredMembers\" : [ {    \"mail\" : \"mail\",    \"name\" : \"name\",    \"userID\" : \"userID\"  }, {    \"mail\" : \"mail\",    \"name\" : \"name\",    \"userID\" : \"userID\"  } ],  \"address\" : {    \"zip\" : 0,    \"city\" : \"city\",    \"street\" : \"street\"  },  \"currentMemberCount\" : 1,  \"possibleMemberCount\" : 6,  \"endDate\" : \"endDate\",  \"admin\" : {    \"mail\" : \"mail\",    \"name\" : \"name\",    \"userID\" : \"userID\"  },  \"description\" : \"description\",  \"title\" : \"title\",  \"type\" : \"category1\",  \"userID\" : \"userID\",  \"userSecret\" : \"userSecret\"} ]", List.class), HttpStatus.NOT_IMPLEMENTED);
                 } catch (IOException e) {
                     log.error("Couldn't serialize response for content type application/json", e);
                     return new ResponseEntity<>(HttpStatus.INTERNAL_SERVER_ERROR);
