# src/generated/java/com/beevy/model/EventResource.java
@@ -2,11 +2,14 @@ package com.beevy.model;
 
 import java.util.Objects;
 import com.beevy.model.AddressResource;
+import com.beevy.model.UserResource;
 import com.fasterxml.jackson.annotation.JsonProperty;
 import com.fasterxml.jackson.annotation.JsonCreator;
 import com.fasterxml.jackson.annotation.JsonValue;
 import io.swagger.annotations.ApiModel;
 import io.swagger.annotations.ApiModelProperty;
+import java.util.ArrayList;
+import java.util.List;
 import org.springframework.validation.annotation.Validated;
 import javax.validation.Valid;
 import javax.validation.constraints.*;
@@ -15,7 +18,7 @@ import javax.validation.constraints.*;
  * EventResource
  */
 @Validated
-@javax.annotation.Generated(value = "io.swagger.codegen.languages.SpringCodegen", date = "2018-04-05T17:22:39.402+02:00")
+@javax.annotation.Generated(value = "io.swagger.codegen.languages.SpringCodegen", date = "2018-04-07T16:19:30.660+02:00")
 
 public class EventResource   {
   @JsonProperty("userID")
@@ -24,16 +27,22 @@ public class EventResource   {
   @JsonProperty("userSecret")
   private String userSecret = null;
 
+  @JsonProperty("admin")
+  private UserResource admin = null;
+
   @JsonProperty("title")
   private String title = null;
+
+  @JsonProperty("summary")
+  private String summary = null;
 
   @JsonProperty("description")
   private String description = null;
 
   /**
-   * Gets or Sets category
+   * Gets or Sets type
    */
-  public enum CategoryEnum {
+  public enum TypeEnum {
     CATEGORY1("category1"),
     
     CATEGORY2("category2"),
@@ -42,7 +51,7 @@ public class EventResource   {
 
     private String value;
 
-    CategoryEnum(String value) {
+    TypeEnum(String value) {
       this.value = value;
     }
 
@@ -53,8 +62,8 @@ public class EventResource   {
     }
 
     @JsonCreator
-    public static CategoryEnum fromValue(String text) {
-      for (CategoryEnum b : CategoryEnum.values()) {
+    public static TypeEnum fromValue(String text) {
+      for (TypeEnum b : TypeEnum.values()) {
         if (String.valueOf(b.value).equals(text)) {
           return b;
         }
@@ -63,17 +72,27 @@ public class EventResource   {
     }
   }
 
-  @JsonProperty("category")
-  private CategoryEnum category = null;
+  @JsonProperty("type")
+  private TypeEnum type = null;
 
-  @JsonProperty("memberCount")
-  private Integer memberCount = null;
+  @JsonProperty("date")
+  private String date = null;
 
-  @JsonProperty("time")
-  private String time = null;
+  @JsonProperty("endDate")
+  private String endDate = null;
 
-  @JsonProperty("location")
-  private AddressResource location = null;
+  @JsonProperty("address")
+  private AddressResource address = null;
+
+  @JsonProperty("registeredMembers")
+  @Valid
+  private List<UserResource> registeredMembers = null;
+
+  @JsonProperty("possibleMemberCount")
+  private Integer possibleMemberCount = null;
+
+  @JsonProperty("currentMemberCount")
+  private Integer currentMemberCount = null;
 
   public EventResource userID(String userID) {
     this.userID = userID;
@@ -115,6 +134,27 @@ public class EventResource   {
     this.userSecret = userSecret;
   }
 
+  public EventResource admin(UserResource admin) {
+    this.admin = admin;
+    return this;
+  }
+
+  /**
+   * Get admin
+   * @return admin
+  **/
+  @ApiModelProperty(value = "")
+
+  @Valid
+
+  public UserResource getAdmin() {
+    return admin;
+  }
+
+  public void setAdmin(UserResource admin) {
+    this.admin = admin;
+  }
+
   public EventResource title(String title) {
     this.title = title;
     return this;
@@ -133,6 +173,26 @@ public class EventResource   {
 
   public void setTitle(String title) {
     this.title = title;
+  }
+
+  public EventResource summary(String summary) {
+    this.summary = summary;
+    return this;
+  }
+
+  /**
+   * Get summary
+   * @return summary
+  **/
+  @ApiModelProperty(value = "")
+
+
+  public String getSummary() {
+    return summary;
+  }
+
+  public void setSummary(String summary) {
+    this.summary = summary;
   }
 
   public EventResource description(String description) {
@@ -155,85 +215,154 @@ public class EventResource   {
     this.description = description;
   }
 
-  public EventResource category(CategoryEnum category) {
-    this.category = category;
+  public EventResource type(TypeEnum type) {
+    this.type = type;
     return this;
   }
 
   /**
-   * Get category
-   * @return category
+   * Get type
+   * @return type
   **/
   @ApiModelProperty(value = "")
 
 
-  public CategoryEnum getCategory() {
-    return category;
+  public TypeEnum getType() {
+    return type;
   }
 
-  public void setCategory(CategoryEnum category) {
-    this.category = category;
+  public void setType(TypeEnum type) {
+    this.type = type;
   }
 
-  public EventResource memberCount(Integer memberCount) {
-    this.memberCount = memberCount;
+  public EventResource date(String date) {
+    this.date = date;
     return this;
   }
 
   /**
-   * Get memberCount
-   * @return memberCount
+   * Get date
+   * @return date
   **/
   @ApiModelProperty(value = "")
 
 
-  public Integer getMemberCount() {
-    return memberCount;
+  public String getDate() {
+    return date;
   }
 
-  public void setMemberCount(Integer memberCount) {
-    this.memberCount = memberCount;
+  public void setDate(String date) {
+    this.date = date;
   }
 
-  public EventResource time(String time) {
-    this.time = time;
+  public EventResource endDate(String endDate) {
+    this.endDate = endDate;
     return this;
   }
 
   /**
-   * Get time
-   * @return time
+   * Get endDate
+   * @return endDate
   **/
   @ApiModelProperty(value = "")
 
 
-  public String getTime() {
-    return time;
+  public String getEndDate() {
+    return endDate;
   }
 
-  public void setTime(String time) {
-    this.time = time;
+  public void setEndDate(String endDate) {
+    this.endDate = endDate;
   }
 
-  public EventResource location(AddressResource location) {
-    this.location = location;
+  public EventResource address(AddressResource address) {
+    this.address = address;
     return this;
   }
 
   /**
-   * Get location
-   * @return location
+   * Get address
+   * @return address
   **/
   @ApiModelProperty(value = "")
 
   @Valid
 
-  public AddressResource getLocation() {
-    return location;
+  public AddressResource getAddress() {
+    return address;
   }
 
-  public void setLocation(AddressResource location) {
-    this.location = location;
+  public void setAddress(AddressResource address) {
+    this.address = address;
+  }
+
+  public EventResource registeredMembers(List<UserResource> registeredMembers) {
+    this.registeredMembers = registeredMembers;
+    return this;
+  }
+
+  public EventResource addRegisteredMembersItem(UserResource registeredMembersItem) {
+    if (this.registeredMembers == null) {
+      this.registeredMembers = new ArrayList<>();
+    }
+    this.registeredMembers.add(registeredMembersItem);
+    return this;
+  }
+
+  /**
+   * Get registeredMembers
+   * @return registeredMembers
+  **/
+  @ApiModelProperty(value = "")
+
+  @Valid
+
+  public List<UserResource> getRegisteredMembers() {
+    return registeredMembers;
+  }
+
+  public void setRegisteredMembers(List<UserResource> registeredMembers) {
+    this.registeredMembers = registeredMembers;
+  }
+
+  public EventResource possibleMemberCount(Integer possibleMemberCount) {
+    this.possibleMemberCount = possibleMemberCount;
+    return this;
+  }
+
+  /**
+   * Get possibleMemberCount
+   * @return possibleMemberCount
+  **/
+  @ApiModelProperty(value = "")
+
+
+  public Integer getPossibleMemberCount() {
+    return possibleMemberCount;
+  }
+
+  public void setPossibleMemberCount(Integer possibleMemberCount) {
+    this.possibleMemberCount = possibleMemberCount;
+  }
+
+  public EventResource currentMemberCount(Integer currentMemberCount) {
+    this.currentMemberCount = currentMemberCount;
+    return this;
+  }
+
+  /**
+   * Get currentMemberCount
+   * @return currentMemberCount
+  **/
+  @ApiModelProperty(value = "")
+
+
+  public Integer getCurrentMemberCount() {
+    return currentMemberCount;
+  }
+
+  public void setCurrentMemberCount(Integer currentMemberCount) {
+    this.currentMemberCount = currentMemberCount;
   }
 
 
@@ -248,17 +377,22 @@ public class EventResource   {
     EventResource event = (EventResource) o;
     return Objects.equals(this.userID, event.userID) &&
         Objects.equals(this.userSecret, event.userSecret) &&
+        Objects.equals(this.admin, event.admin) &&
         Objects.equals(this.title, event.title) &&
+        Objects.equals(this.summary, event.summary) &&
         Objects.equals(this.description, event.description) &&
-        Objects.equals(this.category, event.category) &&
-        Objects.equals(this.memberCount, event.memberCount) &&
-        Objects.equals(this.time, event.time) &&
-        Objects.equals(this.location, event.location);
+        Objects.equals(this.type, event.type) &&
+        Objects.equals(this.date, event.date) &&
+        Objects.equals(this.endDate, event.endDate) &&
+        Objects.equals(this.address, event.address) &&
+        Objects.equals(this.registeredMembers, event.registeredMembers) &&
+        Objects.equals(this.possibleMemberCount, event.possibleMemberCount) &&
+        Objects.equals(this.currentMemberCount, event.currentMemberCount);
   }
 
   @Override
   public int hashCode() {
-    return Objects.hash(userID, userSecret, title, description, category, memberCount, time, location);
+    return Objects.hash(userID, userSecret, admin, title, summary, description, type, date, endDate, address, registeredMembers, possibleMemberCount, currentMemberCount);
   }
 
   @Override
@@ -268,12 +402,17 @@ public class EventResource   {
     
     sb.append("    userID: ").append(toIndentedString(userID)).append("\n");
     sb.append("    userSecret: ").append(toIndentedString(userSecret)).append("\n");
+    sb.append("    admin: ").append(toIndentedString(admin)).append("\n");
     sb.append("    title: ").append(toIndentedString(title)).append("\n");
+    sb.append("    summary: ").append(toIndentedString(summary)).append("\n");
     sb.append("    description: ").append(toIndentedString(description)).append("\n");
-    sb.append("    category: ").append(toIndentedString(category)).append("\n");
-    sb.append("    memberCount: ").append(toIndentedString(memberCount)).append("\n");
-    sb.append("    time: ").append(toIndentedString(time)).append("\n");
-    sb.append("    location: ").append(toIndentedString(location)).append("\n");
+    sb.append("    type: ").append(toIndentedString(type)).append("\n");
+    sb.append("    date: ").append(toIndentedString(date)).append("\n");
+    sb.append("    endDate: ").append(toIndentedString(endDate)).append("\n");
+    sb.append("    address: ").append(toIndentedString(address)).append("\n");
+    sb.append("    registeredMembers: ").append(toIndentedString(registeredMembers)).append("\n");
+    sb.append("    possibleMemberCount: ").append(toIndentedString(possibleMemberCount)).append("\n");
+    sb.append("    currentMemberCount: ").append(toIndentedString(currentMemberCount)).append("\n");
     sb.append("}");
     return sb.toString();
   }
