# src/main/java/beevy/backend/model/Event.java
@@ -1,23 +1,34 @@
 package beevy.backend.model;
 
+import com.beevy.model.AddressResource;
+import com.beevy.model.EventResource;
+import com.beevy.model.UserResource;
 import com.fasterxml.jackson.annotation.JsonCreator;
 import com.fasterxml.jackson.annotation.JsonValue;
+import lombok.Getter;
+import lombok.Setter;
 import org.springframework.data.annotation.Id;
 
+import java.util.List;
 
-
-
+@Getter
+@Setter
 public class Event {
 
     @Id
-    private String userID = null;
-    private String userSecret = null;
-    private String title = null;
-    private String description = null;
-    private CategoryEnum category = null;
-    private Integer memberCount = null;
-    private String time = null;
-    private Address location = null;
+    private String userID;
+    private String userSecret;
+    private UserResource admin;
+    private String title;
+    private String summary;
+    private String description;
+    private EventResource.TypeEnum type;
+    private String date;
+    private String endDate;
+    private AddressResource address;
+    private List<UserResource> registeredMembers;
+    private Integer possibleMemberCount;
+    private Integer currentMemberCount;
 
     public Event userID(String userID) {
         this.userID = userID;
@@ -45,6 +56,19 @@ public class Event {
         this.userSecret = userSecret;
     }
 
+    public Event admin(UserResource admin) {
+        this.admin = admin;
+        return this;
+    }
+
+    public UserResource getAdmin() {
+        return admin;
+    }
+
+    public void setAdmin(UserResource admin) {
+        this.admin = admin;
+    }
+
     public Event title(String title) {
         this.title = title;
         return this;
@@ -56,6 +80,19 @@ public class Event {
 
     public void setTitle(String title) {
         this.title = title;
+    }
+
+    public Event summary(String summary) {
+        this.summary = summary;
+        return this;
+    }
+
+    public String getSummary() {
+        return summary;
+    }
+
+    public void setSummary(String summary) {
+        this.summary = summary;
     }
 
     public Event description(String description) {
@@ -71,61 +108,56 @@ public class Event {
         this.description = description;
     }
 
-    public Event category(CategoryEnum category) {
-        this.category = category;
+    public Event type(EventResource.TypeEnum category) {
+        this.type = category;
         return this;
     }
 
-
-
-    public CategoryEnum getCategory() {
-        return category;
+    public EventResource.TypeEnum getType() {
+        return type;
     }
 
-    public void setCategory(CategoryEnum category) {
-        this.category = category;
+    public void setType(EventResource.TypeEnum type) {
+        this.type = type;
     }
 
-    public Event memberCount(Integer memberCount) {
-        this.memberCount = memberCount;
+    public Event date(String time) {
+        this.date = time;
         return this;
     }
 
-
-
-    public Integer getMemberCount() {
-        return memberCount;
+    public String getDate() {
+        return date;
     }
 
-    public void setMemberCount(Integer memberCount) {
-        this.memberCount = memberCount;
+    public void setDate(String date) {
+        this.date = date;
     }
 
-    public Event time(String time) {
-        this.time = time;
+    public Event endDate(String date) {
+        this.endDate = date;
         return this;
     }
 
-    public String getTime() {
-        return time;
+    public String getEndDate() {
+        return endDate;
     }
 
-    public void setTime(String time) {
-        this.time = time;
+    public void setEndDate(String date) {
+        this.endDate = date;
     }
 
-    public Event location(Address location) {
-        this.location = location;
+    public Event address(AddressResource location) {
+        this.address = location;
         return this;
     }
 
-
-    public Address getLocation() {
-        return location;
+    public AddressResource getAddress() {
+        return address;
     }
 
-    public void setLocation(Address location) {
-        this.location = location;
+    public void setAddress(AddressResource address) {
+        this.address = address;
     }
 
     public enum CategoryEnum {
@@ -156,6 +188,45 @@ public class Event {
         public String toString() {
             return String.valueOf(value);
         }
+    }
+
+    public Event registeredMembers(List<UserResource> users){
+        this.registeredMembers = users;
+        return this;
+    }
+
+    public List<UserResource> getRegisteredMembers(){
+        return this.registeredMembers;
+    }
+
+    public void setRegisteredMembers(List<UserResource> users){
+        this.registeredMembers = users;
+    }
+
+    public Event possibleMemberCount(Integer possibleMemberCount){
+        this.possibleMemberCount = possibleMemberCount;
+        return this;
+    }
+
+    public Integer getPossibleMemberCount(){
+        return this.possibleMemberCount;
+    }
+
+    public void setPossibleMemberCount(Integer possibleMemberCount){
+        this.possibleMemberCount = possibleMemberCount;
+    }
+
+    public Event currentMemberCount(Integer currentMemberCount){
+        this.currentMemberCount = currentMemberCount;
+        return this;
+    }
+
+    public Integer getCurrentMemberCount(){
+        return this.currentMemberCount;
+    }
+
+    public void setCurrentMemberCount(Integer currentMemberCount) {
+        this.currentMemberCount = currentMemberCount;
     }
 }
 
